--- a/static/static.html
+++ b/static/static.html
@@ -26,7 +26,7 @@
 
 <body>
 
-<h2>Signup</h2>
+<h2>Signup(If you have already signed up then directly go for login)</h2>
 <input id="su_user" placeholder="Username">
 <input id="su_pass" type="password" placeholder="Password">
 <button onclick="signup()">Signup</button>
